--- a/smart_document_workflow/.env
+++ b/smart_document_workflow/.env
@@ -1,1 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/
+MONGO_URI = mongodb://localhost:27017/
+
+SECRET_KEY = thisisasecretkey27
+
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
